[gd_scene load_steps=76 format=3 uid="uid://b20mrgkaiv8ia"]

[ext_resource type="PackedScene" uid="uid://cnd06dpkgufe4" path="res://world/levels/level_base.tscn" id="1_rgxop"]
[ext_resource type="PackedScene" uid="uid://c4q0hmrfl5yh2" path="res://enemy/frog_boss/frog_boss.tscn" id="2_5mjho"]
[ext_resource type="PackedScene" uid="uid://bwo5q4wroaigc" path="res://world/interactable/transition_trigger/transition_trigger.tscn" id="4_o7ek0"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/shape_closed.gd" id="5_oqkb7"]
[ext_resource type="Script" path="res://addons/rmsmartshape/vertex_properties.gd" id="6_xm1vf"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point.gd" id="7_1kgmo"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/point_array.gd" id="8_awqfo"]
[ext_resource type="Resource" uid="uid://6wcd4668mjsi" path="res://world/smart_shapes/grass/grass_grove.tres" id="9_hoohh"]
[ext_resource type="Resource" uid="uid://5l6yr7pkapvo" path="res://world/smart_shapes/water/water.tres" id="12_3nn5l"]
[ext_resource type="Script" path="res://world/decoration/trees/tree_gen.gd" id="13_i02w2"]
[ext_resource type="PackedScene" uid="uid://lwuwqeygvnpx" path="res://world/decoration/trees/weeping_tree.tscn" id="14_0ycpi"]
[ext_resource type="PackedScene" uid="uid://cy3ubw4jghdvi" path="res://world/decoration/crystal/crystal_blue.tscn" id="15_u3bmj"]
[ext_resource type="Script" path="res://addons/rmsmartshape/shapes/shape.gd" id="16_cppia"]
[ext_resource type="Resource" uid="uid://c7fgg0kcdqit0" path="res://world/smart_shapes/shadow/shadow.tres" id="17_fx51t"]
[ext_resource type="PackedScene" uid="uid://doilpvge0y7f5" path="res://world/decoration/crystal/crystal_blue_collidable.tscn" id="18_sbn1m"]
[ext_resource type="PackedScene" uid="uid://yknhn4wogf5i" path="res://world/decoration/crystal/crystal_purple_collidable.tscn" id="19_ge57s"]
[ext_resource type="PackedScene" uid="uid://cexm5ohj0j67i" path="res://ui/boss_health_bar/boss_health_bar.tscn" id="19_s0anr"]
[ext_resource type="Script" path="res://world/levels/dungeon2/starting_animator.gd" id="20_f0jmn"]
[ext_resource type="PackedScene" uid="uid://dmrs4pudb0lwa" path="res://world/decoration/bushes/biolum_bushes/bush_blue.tscn" id="20_gexcg"]
[ext_resource type="Texture2D" uid="uid://b7satv1cyn6xx" path="res://world/objects/breakable_object/rock.png" id="21_elvc7"]
[ext_resource type="PackedScene" uid="uid://b6ycumade0fwn" path="res://world/decoration/bushes/biolum_bushes/bush_purple.tscn" id="21_u68wy"]

[sub_resource type="Resource" id="Resource_pgo2m"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_vmuim"]
script = ExtResource("7_1kgmo")
position = Vector2(-71.3451, -75.1015)
point_in = Vector2(-143.675, 363.678)
point_out = Vector2(143.675, -363.678)
properties = SubResource("Resource_pgo2m")

[sub_resource type="Resource" id="Resource_ewkbt"]
script = ExtResource("6_xm1vf")
texture_idx = 3
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_subs8"]
script = ExtResource("7_1kgmo")
position = Vector2(86.7792, 842.939)
point_in = Vector2(170.614, 255.921)
point_out = Vector2(-170.614, -255.921)
properties = SubResource("Resource_ewkbt")

[sub_resource type="Resource" id="Resource_58bsh"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_rtte4"]
script = ExtResource("7_1kgmo")
position = Vector2(1235.43, 790.041)
point_in = Vector2(228.982, -404.086)
point_out = Vector2(-228.982, 404.086)
properties = SubResource("Resource_58bsh")

[sub_resource type="Resource" id="Resource_tc32s"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_rwmod"]
script = ExtResource("7_1kgmo")
position = Vector2(1299.26, -66.1218)
point_in = Vector2(-215.513, -224.492)
point_out = Vector2(215.513, 224.492)
properties = SubResource("Resource_tc32s")

[sub_resource type="Resource" id="Resource_tw3mf"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_5powe"]
script = ExtResource("7_1kgmo")
position = Vector2(-71.3451, -75.1015)
point_in = Vector2(-143.675, 363.678)
point_out = Vector2(143.675, -363.678)
properties = SubResource("Resource_tw3mf")

[sub_resource type="Resource" id="Resource_owix6"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_lgy5s"]
script = ExtResource("7_1kgmo")
position = Vector2(-193.734, 2168.11)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_owix6")

[sub_resource type="Resource" id="Resource_5xop3"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_p1mie"]
script = ExtResource("7_1kgmo")
position = Vector2(1695.68, 2156.99)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_5xop3")

[sub_resource type="Resource" id="Resource_ooqid"]
script = ExtResource("8_awqfo")
_points = {
0: SubResource("Resource_vmuim"),
1: SubResource("Resource_subs8"),
2: SubResource("Resource_rtte4"),
3: SubResource("Resource_rwmod"),
4: SubResource("Resource_5powe"),
5: SubResource("Resource_lgy5s"),
6: SubResource("Resource_p1mie")
}
_point_order = PackedInt32Array(4, 3, 2, 6, 5, 1, 0)
_constraints = {
Vector2i(0, 4): 15
}
_next_key = 11
_material_overrides = {}
tessellation_stages = 3
tessellation_tolerance = 6.0
curve_bake_interval = 20.0

[sub_resource type="Resource" id="Resource_itjb7"]
script = ExtResource("6_xm1vf")
texture_idx = -2
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_yy76w"]
script = ExtResource("7_1kgmo")
position = Vector2(-71.3451, -75.1015)
point_in = Vector2(143.675, -363.678)
point_out = Vector2(-231.675, 559.678)
properties = SubResource("Resource_itjb7")

[sub_resource type="Resource" id="Resource_pd373"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_lxpci"]
script = ExtResource("7_1kgmo")
position = Vector2(1235.43, 790.041)
point_in = Vector2(-228.982, 404.086)
point_out = Vector2(228.982, -404.086)
properties = SubResource("Resource_pd373")

[sub_resource type="Resource" id="Resource_tsjn0"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_lxtq2"]
script = ExtResource("7_1kgmo")
position = Vector2(1299.26, -66.1218)
point_in = Vector2(215.513, 224.492)
point_out = Vector2(-215.513, -224.492)
properties = SubResource("Resource_tsjn0")

[sub_resource type="Resource" id="Resource_0rt2r"]
script = ExtResource("7_1kgmo")
position = Vector2(-71.3451, -75.1015)
point_in = Vector2(143.675, -363.678)
point_out = Vector2(-231.675, 559.678)
properties = SubResource("Resource_itjb7")

[sub_resource type="Resource" id="Resource_ij84f"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ctmbu"]
script = ExtResource("7_1kgmo")
position = Vector2(-193.734, 2168.11)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_ij84f")

[sub_resource type="Resource" id="Resource_g186a"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_46qe2"]
script = ExtResource("7_1kgmo")
position = Vector2(1695.68, 2156.99)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_g186a")

[sub_resource type="Resource" id="Resource_re3jy"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ir20x"]
script = ExtResource("7_1kgmo")
position = Vector2(-1678.99, 2174.11)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_re3jy")

[sub_resource type="Resource" id="Resource_b4w51"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_18534"]
script = ExtResource("7_1kgmo")
position = Vector2(-1619.85, -952.893)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_b4w51")

[sub_resource type="Resource" id="Resource_12ci4"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_qqtng"]
script = ExtResource("7_1kgmo")
position = Vector2(2982.37, -955.156)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_12ci4")

[sub_resource type="Resource" id="Resource_wbhus"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_e6tnd"]
script = ExtResource("7_1kgmo")
position = Vector2(2846.37, 2212.84)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_wbhus")

[sub_resource type="Resource" id="Resource_xwowt"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_80gwc"]
script = ExtResource("7_1kgmo")
position = Vector2(101.69, 904.432)
point_in = Vector2(-57.0176, -370.614)
point_out = Vector2(57.0176, 370.614)
properties = SubResource("Resource_xwowt")

[sub_resource type="Resource" id="Resource_y7e4m"]
script = ExtResource("8_awqfo")
_points = {
0: SubResource("Resource_yy76w"),
2: SubResource("Resource_lxpci"),
3: SubResource("Resource_lxtq2"),
4: SubResource("Resource_0rt2r"),
5: SubResource("Resource_ctmbu"),
6: SubResource("Resource_46qe2"),
11: SubResource("Resource_ir20x"),
12: SubResource("Resource_18534"),
13: SubResource("Resource_qqtng"),
14: SubResource("Resource_e6tnd"),
16: SubResource("Resource_80gwc")
}
_point_order = PackedInt32Array(0, 16, 5, 11, 12, 13, 14, 6, 2, 3, 4)
_constraints = {
Vector2i(0, 4): 15
}
_next_key = 17
_material_overrides = {}
tessellation_stages = 3
tessellation_tolerance = 6.0
curve_bake_interval = 20.0

[sub_resource type="Resource" id="Resource_xjwf8"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_1y3uo"]
script = ExtResource("7_1kgmo")
position = Vector2(-143.828, 2133.84)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_xjwf8")

[sub_resource type="Resource" id="Resource_qcwht"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_wi126"]
script = ExtResource("7_1kgmo")
position = Vector2(104.539, 1087.28)
point_in = Vector2(-85.6229, 68.974)
point_out = Vector2(85.6229, -68.974)
properties = SubResource("Resource_qcwht")

[sub_resource type="Resource" id="Resource_x404s"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_2rxyq"]
script = ExtResource("7_1kgmo")
position = Vector2(422.805, 1053.98)
point_in = Vector2(-97.515, -2.37842)
point_out = Vector2(97.515, 2.37842)
properties = SubResource("Resource_x404s")

[sub_resource type="Resource" id="Resource_1h354"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_ghf85"]
script = ExtResource("7_1kgmo")
position = Vector2(685.539, 1355.59)
point_in = Vector2(-83.2445, 9.51367)
point_out = Vector2(83.2445, -9.51367)
properties = SubResource("Resource_1h354")

[sub_resource type="Resource" id="Resource_lmfyh"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_xnx13"]
script = ExtResource("7_1kgmo")
position = Vector2(905.396, 1038.11)
point_in = Vector2(-116.542, 9.51355)
point_out = Vector2(116.542, -9.51355)
properties = SubResource("Resource_lmfyh")

[sub_resource type="Resource" id="Resource_xmhqv"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_wjub0"]
script = ExtResource("7_1kgmo")
position = Vector2(1213.33, 1076.21)
point_in = Vector2(-97.5149, -68.974)
point_out = Vector2(97.5149, 68.974)
properties = SubResource("Resource_xmhqv")

[sub_resource type="Resource" id="Resource_0dlr5"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_enbad"]
script = ExtResource("7_1kgmo")
position = Vector2(1638.75, 2079.44)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_0dlr5")

[sub_resource type="Resource" id="Resource_bu0ps"]
script = ExtResource("6_xm1vf")
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id="Resource_etji2"]
script = ExtResource("7_1kgmo")
position = Vector2(-143.828, 2133.84)
point_in = Vector2(0, 0)
point_out = Vector2(0, 0)
properties = SubResource("Resource_bu0ps")

[sub_resource type="Resource" id="Resource_uafkj"]
script = ExtResource("8_awqfo")
_points = {
0: SubResource("Resource_1y3uo"),
1: SubResource("Resource_wi126"),
2: SubResource("Resource_2rxyq"),
3: SubResource("Resource_ghf85"),
4: SubResource("Resource_xnx13"),
5: SubResource("Resource_wjub0"),
6: SubResource("Resource_enbad"),
7: SubResource("Resource_etji2")
}
_point_order = PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7)
_constraints = {
Vector2i(0, 7): 15
}
_next_key = 10
_material_overrides = {}
tessellation_stages = 3
tessellation_tolerance = 6.0
curve_bake_interval = 20.0

[node name="FrogBossRoom" instance=ExtResource("1_rgxop")]

[node name="Top_Left_River" type="Node2D" parent="EntryPoints" index="0"]
position = Vector2(683, 1090)

[node name="Player" parent="." index="5"]
z_index = 100
position = Vector2(667, 1088)

[node name="FrogBoss" parent="." index="6" instance=ExtResource("2_5mjho")]
unique_name_in_owner = true
position = Vector2(568, -4646)

[node name="Floor" type="Node2D" parent="." index="7"]
z_index = -8
script = ExtResource("5_oqkb7")
_points = SubResource("Resource_ooqid")
shape_material = ExtResource("9_hoohh")

[node name="FloorShadow" type="Node2D" parent="." index="8"]
z_index = -9
position = Vector2(56, 40)
script = ExtResource("5_oqkb7")
_points = SubResource("Resource_ooqid")
shape_material = ExtResource("17_fx51t")

[node name="Water" type="StaticBody2D" parent="." index="11"]
collision_layer = 8

[node name="SmartShape" type="Node2D" parent="Water" index="0"]
z_index = -10
script = ExtResource("5_oqkb7")
_points = SubResource("Resource_y7e4m")
shape_material = ExtResource("12_3nn5l")
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Water" index="1"]
visible = false
modulate = Color(1, 1, 1, 0.3)
polygon = PackedVector2Array(-71.3451, -75.1015, -132.765, 112.476, -146.292, 191.365, -150.064, 261.947, -145.355, 325.439, -133.44, 383.061, -93.0873, 485.564, 18.0197, 673.732, 68.3823, 778.891, 87.8053, 838.505, 101.69, 904.432, 107.768, 979.699, 105.366, 1065.14, 79.5843, 1258.23, -24.6404, 1675.25, -193.734, 2168.11, -1678.99, 2174.11, -1619.85, -952.893, 2982.37, -955.156, 2846.37, 2212.84, 1695.68, 2156.99, 1379.69, 1625.05, 1280.43, 1400.13, 1210.74, 1174.1, 1192.87, 1066.24, 1189.46, 964.794, 1202.86, 871.984, 1235.43, 790.041, 1372.31, 517.361, 1413.08, 400.761, 1434.03, 294.612, 1436.76, 244.821, 1434.15, 196.881, 1426.07, 150.538, 1412.41, 105.537, 1393.02, 61.6242, 1367.78, 18.5464, 1299.26, -66.1218, 1249.93, -107.213, 1184.38, -145.878, 1014.39, -213.375, 808.767, -263.508, 587.018, -291.175, 368.637, -291.272, 173.118, -258.694, 90.0253, -228.558, 19.9591, -188.339, -34.6433, -137.399, -71.3451, -75.1015)

[node name="TreeGen" type="StaticBody2D" parent="." index="12"]
y_sort_enabled = true
script = ExtResource("13_i02w2")
tree_scene = ExtResource("14_0ycpi")
secondary_tree_scene = ExtResource("15_u3bmj")
secondary_tree_odds = 0.211
tree_interval = 224.436
randomness = 0.646

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TreeGen" index="0"]
polygon = PackedVector2Array(121, 1053, 415, 1038, 710, 1570, 876, 985, 1182, 1034, 1677, 2123, -175, 2153)

[node name="Shadow" type="Node2D" parent="." index="13"]

[node name="SS2D_Shape" type="Node2D" parent="Shadow" index="0"]
z_index = 5
script = ExtResource("16_cppia")
_points = SubResource("Resource_uafkj")
shape_material = ExtResource("17_fx51t")

[node name="SS2D_Shape2" type="Node2D" parent="Shadow" index="1"]
z_index = 5
position = Vector2(51, 152)
scale = Vector2(0.94427, 0.94427)
script = ExtResource("16_cppia")
_points = SubResource("Resource_uafkj")
shape_material = ExtResource("17_fx51t")

[node name="SS2D_Shape3" type="Node2D" parent="Shadow" index="2"]
z_index = 5
position = Vector2(87, 282)
scale = Vector2(0.90273, 0.90273)
script = ExtResource("16_cppia")
_points = SubResource("Resource_uafkj")
shape_material = ExtResource("17_fx51t")

[node name="TransitionScene" parent="Shadow" index="3" instance=ExtResource("4_o7ek0")]
position = Vector2(679, 1327)
scale = Vector2(12.8685, 4.04644)
scene_name = "top_left_river"
entry_point = "Boss_Room"

[node name="CanvasModulate" type="CanvasModulate" parent="." index="14"]
color = Color(0.67, 0.67, 0.67, 1)

[node name="Crystals" type="Node2D" parent="." index="15"]

[node name="CrystalCollidable" parent="Crystals" index="0" instance=ExtResource("18_sbn1m")]
position = Vector2(252, -59)

[node name="CrystalCollidable2" parent="Crystals" index="1" instance=ExtResource("18_sbn1m")]
position = Vector2(1140, 611)

[node name="CrystalCollidable3" parent="Crystals" index="2" instance=ExtResource("19_ge57s")]
position = Vector2(150, 710)

[node name="CrystalCollidable4" parent="Crystals" index="3" instance=ExtResource("19_ge57s")]
position = Vector2(1052, 26)

[node name="Bush" type="Node2D" parent="." index="16"]

[node name="BushBlue" parent="Bush" index="0" instance=ExtResource("20_gexcg")]
position = Vector2(114, -42)

[node name="BushBlue2" parent="Bush" index="1" instance=ExtResource("20_gexcg")]
position = Vector2(1132, 726)

[node name="BushBlue3" parent="Bush" index="2" instance=ExtResource("20_gexcg")]
position = Vector2(7, 512)

[node name="BushBlue4" parent="Bush" index="3" instance=ExtResource("20_gexcg")]
position = Vector2(1189, 124)

[node name="BushPurple" parent="Bush" index="4" instance=ExtResource("21_u68wy")]
position = Vector2(0, 100)

[node name="BushPurple2" parent="Bush" index="5" instance=ExtResource("21_u68wy")]
position = Vector2(1307, 309)

[node name="BushPurple3" parent="Bush" index="6" instance=ExtResource("21_u68wy")]
position = Vector2(634, -163)

[node name="BossHealthBar" parent="." index="17" node_paths=PackedStringArray("boss") instance=ExtResource("19_s0anr")]
boss = NodePath("../FrogBoss")

[node name="DoorBlock" type="StaticBody2D" parent="." index="18"]
unique_name_in_owner = true

[node name="Rock" type="Sprite2D" parent="DoorBlock" index="0"]
position = Vector2(684, 1321)
texture = ExtResource("21_elvc7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DoorBlock" index="1"]
polygon = PackedVector2Array(519, 1126, 866, 1137, 856, 1466, 480, 1443)

[node name="StartingAnimator" type="Area2D" parent="." index="19"]
collision_layer = 0
collision_mask = 2
script = ExtResource("20_f0jmn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StartingAnimator" index="0"]
polygon = PackedVector2Array(-207, -99, 1317, -64, 1545, 955, -208, 948)

[node name="0" type="Marker2D" parent="StartingAnimator" index="1"]
position = Vector2(856, 658)

[node name="1" type="Marker2D" parent="StartingAnimator" index="2"]
position = Vector2(496, 552)

[node name="FrogPos" type="Marker2D" parent="StartingAnimator" index="3"]
position = Vector2(374, 211)

[connection signal="body_entered" from="StartingAnimator" to="StartingAnimator" method="_on_body_entered"]
